objects/CQS_Prog_An_junc__c.object
<CustomObject>
    <fields>
        <fullName>CQS_PAJ_Area_Lotto__c</fullName>
        <label>Area/Lotto</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_PAJ_Comune__c</fullName>
        <label>Comune</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_PAJ_Data_Contratto__c</fullName>
        <label>Data Contratto</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_PAJ_Importo_Aggiudicato__c</fullName>
        <label>Importo Aggiudicato</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_PAJ_LDOService2__c</fullName>
        <formula>CQS_Praj_Progetto__r.CQS_Pro_LDO_Service2__c</formula>
        <label>LDO Service 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_PAJ_LDOService3__c</fullName>
        <formula>CQS_Praj_Progetto__r.CQS_Pro_LDO_Service3__c</formula>
        <label>LDO Service 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_PAJ_LDOService__c</fullName>
        <formula>CQS_Praj_Progetto__r.CQS_Pro_LDO_Service__c</formula>
        <label>LDO Service</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_PAJ_Mandante_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mandante 1</label>
        <referenceTo>OF_CQS_Anagrafica__c</referenceTo>
        <relationshipLabel>Progetti Anagrafiche junctions (Mandante 1)</relationshipLabel>
        <relationshipName>Progetti_Anagrafiche_junctions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQS_PAJ_Mandante_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mandante 2</label>
        <referenceTo>OF_CQS_Anagrafica__c</referenceTo>
        <relationshipLabel>Progetti Anagrafiche junctions (Mandante 2)</relationshipLabel>
        <relationshipName>Progetti_Anagrafiche_junctions3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQS_PAJ_Mandante_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mandante 3</label>
        <referenceTo>OF_CQS_Anagrafica__c</referenceTo>
        <relationshipLabel>Progetti Anagrafiche junctions (Mandante 3)</relationshipLabel>
        <relationshipName>Progetti_Anagrafiche_junctions4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQS_PAJ_Mandataria_Capogruppo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mandataria Capogruppo</label>
        <referenceTo>OF_CQS_Anagrafica__c</referenceTo>
        <relationshipLabel>Progetti Anagrafiche junctions (Mandataria Capogruppo)</relationshipLabel>
        <relationshipName>Progetti_Anagrafiche_junctions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQS_PAJ_SS2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Società Services 2</label>
        <referenceTo>CQS_SocietaServices__c</referenceTo>
        <relationshipLabel>Progetti Anagrafiche junctions (Società Services 2)</relationshipLabel>
        <relationshipName>Progetti_Anagrafiche_junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQS_PAJ_SS3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Società Services 3</label>
        <referenceTo>CQS_SocietaServices__c</referenceTo>
        <relationshipLabel>Progetti Anagrafiche junctions (Società Services 3)</relationshipLabel>
        <relationshipName>SocietaService3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQS_PAJ_SS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Società Service</label>
        <referenceTo>CQS_SocietaServices__c</referenceTo>
        <relationshipLabel>Progetti Soc Services junctions</relationshipLabel>
        <relationshipName>Progetti_SocService_junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQS_Paj_Email_Affidataria__c</fullName>
        <label>Email Affidataria</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CQS_Praj_Progetto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Progetto</label>
        <referenceTo>CQS_Progetto__c</referenceTo>
        <relationshipLabel>Progetti Anagrafiche</relationshipLabel>
        <relationshipName>Progetti_Anagrafiche_junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQS_Praj_Ragione_Sociale__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Ragione Sociale</label>
        <referenceTo>OF_CQS_Anagrafica__c</referenceTo>
        <relationshipLabel>Anagrafiche Progetti</relationshipLabel>
        <relationshipName>Progetti_Anagrafiche_junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQS_Praju_LDO__c</fullName>
        <formula>CQS_Praj_Progetto__r.CQS_Pro_LDO__c</formula>
        <label>Lettera D&apos;Ordine</label>
        <type>Text</type>
    </fields>
    <label>Progetto Anagrafica junction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CQS_Praj_Progetto__c</columns>
        <columns>CQS_Praju_LDO__c</columns>
        <columns>CQS_Praj_Ragione_Sociale__c</columns>
        <columns>CQS_PAJ_Comune__c</columns>
        <columns>CQS_PAJ_Importo_Aggiudicato__c</columns>
        <columns>CQS_Paj_Email_Affidataria__c</columns>
        <columns>CQS_PAJ_LDOService__c</columns>
        <columns>CQS_PAJ_SS__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PaJ{0000}</displayFormat>
        <label>Progetto Anagrafica junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Progetti Anagrafiche junctions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>